--- a/app/assets/stylesheets/responsive.less
+++ b/app/assets/stylesheets/responsive.less
@@ -18,6 +18,21 @@
 		}
 	}
 
+	.empty{
+		margin: 16% auto;
+		&.people{
+			margin: 20% auto;
+		}
+		h6:last-child{
+			bottom: 30px;
+			font-weight: 600;
+			width: 100%;
+			position: absolute;
+			margin-bottom: 0;
+			line-height: 21px;
+		}
+	}
+
 	.slider{
 		position: absolute;
 		left: 4%;
