--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h4{
-	font-size: 20px;
+	font-size: 21px;
 }
 
 h5{
@@ -118,9 +118,9 @@ h5{
 }
 
 h6{
-	font-size: 15px;
-	font-weight: 300;
+	font-size: 16px;
 	line-height: 18px;
+	font-weight: 600;
 }
 
 /*-- ICON FONTS --*/
